--- a/src/main/resources/templates/email.html
+++ b/src/main/resources/templates/email.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:margin="http://www.w3.org/1999/xhtml">
 <head>
-    <title th:remove="all">Template for HTML email with inline image</title>
+    <title th:remove="all">Sign up Email</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,14 +9,13 @@
 </head>
 <body style="background-color: #f4f4f4; margin: 0 !important; padding: 0 !important;">
 <!-- HIDDEN PREHEADER TEXT -->
-<div style="display: none; font-size: 1px; color: #fefefe; line-height: 1px; font-family: 'Lato', Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;"> We're thrilled to have you here! Get ready to dive into your new account. </div>
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
     <!-- LOGO -->
     <tr>
         <td bgcolor="#1976d2" align="center">
             <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                 <tr>
-                    <td align="center" valign="top" style="padding: 40px 10px 40px 10px;"> </td>
+                    <td align="center" valign="top" style="padding: 40px 10px 40px 10px;"></td>
                 </tr>
             </table>
         </td>
@@ -26,7 +25,7 @@
             <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                 <tr>
                     <td bgcolor="#ffffff" align="center" valign="top" style="padding: 40px 20px 20px 20px; border-radius: 4px 4px 0px 0px; color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 48px; font-weight: 400; line-height: 48px;">
-                        <h1 style="font-size: 48px; font-weight: 400; margin: 2;">Welcome to ERC</h1>
+                        <h1 style="font-size: 48px; font-weight: 400; margin: 2px;">Welcome to ERC</h1>
                         <img src="https://firebasestorage.googleapis.com/v0/b/mewzik-c3c20.appspot.com/o/staticHtml%2Fsound.png?alt=media&token=e4ffc196-72e0-46be-93bc-a08f45599978" width="125" height="120" style="display: block; border: 0px; margin : 30px 20px 20px 20px" />
                     </td>
                 </tr>
@@ -38,7 +37,7 @@
             <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                 <tr>
                     <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                        <p style="margin: 0;">Thank you for choosing ethical review committee. First, you need to set up your account. Just press the button below.</p>
+                        <p th:text="${message}" ></p>
                     </td>
                 </tr>
                 <tr>
@@ -48,7 +47,7 @@
                                 <td bgcolor="#ffffff" align="center" style="padding: 20px 30px 60px 30px;">
                                     <table border="0" cellspacing="0" cellpadding="0">
                                         <tr>
-                                            <td align="center" style="border-radius: 20px;" bgcolor="#1976d2"><a href="https://www.google.com" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; padding: 15px 25px; border-radius: 20px; border: 1px solid #FFA73B; display: inline-block;">Signup Account</a></td>
+                                            <td align="center" style="border-radius: 20px;" bgcolor="#1976d2"><a th:text="${button}" th:href="${url}" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; padding: 15px 25px; border-radius: 20px;display: inline-block;">Complete Signup Process</a></td>
                                         </tr>
                                     </table>
                                 </td>
